[package]
name = "integration"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.5.0", features = ["map_physical_memory"] }
x86_64 = "0.5.2"

[dependencies.blog_os]
path = "../../"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "../../x86_64-blog_os.json"
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none", "-serial", "mon:stdio"]
